Fix grid header overflow background color

--- a/data/css/_components.scss
+++ b/data/css/_components.scss
@@ -47,6 +47,7 @@
 
 // Table header
 .x-grid-header-ct {
+    background: $color-background-light none;
     @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.3));
 
     .x-column-header {
